added h3 element along with background and font color

--- a/assignment/stylesheet.css
+++ b/assignment/stylesheet.css
@@ -10,3 +10,8 @@ div {
     background-color: rgb(227, 134, 80);
     color: rgb(105, 31, 0);
 }
+
+h3 {
+    background-color: rgb(41, 203, 41);
+    color: rgb(9, 90, 9);
+}
