--- a/assignment/stylesheet.css
+++ b/assignment/stylesheet.css
@@ -9,9 +9,11 @@ body {
 div {
     background-color: rgb(227, 134, 80);
     color: rgb(105, 31, 0);
+    text-align: center;
 }
 
 h3 {
     background-color: rgb(41, 203, 41);
     color: rgb(9, 90, 9);
+    text-align: center;
 }
