--- a/assignment/stylesheet.css
+++ b/assignment/stylesheet.css
@@ -12,6 +12,11 @@ div {
     text-align: center;
 }
 
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 h3 {
     background-color: rgb(41, 203, 41);
     color: rgb(9, 90, 9);
