--- a/assignment/stylesheet.css
+++ b/assignment/stylesheet.css
@@ -10,17 +10,18 @@ div {
     background-color: rgb(227, 134, 80);
     color: rgb(105, 31, 0);
     text-align: center;
-    text-decoration: underline;
+    text-decoration: underline black;
 }
 
 img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border: 10px black double;
 }
 h3 {
     background-color: rgb(41, 203, 41);
     color: rgb(9, 90, 9);
     text-align: center;
-    text-decoration: underline;
+    text-decoration: underline black;
 }
